Integrated new tests for getting 3d gardens with existing integration tests for the controller